<resources>
    <string name="app_name">Github App Sub 3</string>
    <string name="search">Cari</string>
    <string name="insert_user">Masukan Github User</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="number_repository">0</string>
    <string name="number_followers">0</string>
    <string name="followers">Followers</string>
    <string name="number_following">0</string>
    <string name="following">Following</string>
    <string name="name">Name</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_home">Welcome</string>
    <string name="menu_favorite">Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="reminder_at_9_00_am">Reminder at 9:00 am</string>
</resources>